manifests/grafana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-care-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history-care-grafana
  template:
    metadata:
      labels:
        app: history-care-grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources/datasources.yml
              subPath: datasources.yml
      volumes:
        - name: grafana-datasources
          configMap:
            name: history-care-grafana-datasources
