manifests/grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: history-care-grafana-ingress
spec:
  rules:
    - host: grafana.history-care.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: history-care-grafana
                port:
                  number: 3000
